# Wheelchair-Arm-Control

./: README.md  recordupload.py  s2t.py
Alexa/: Alexa_skill.json  MQTT_sub.py
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  my_arm.srdf  ompl_planning.yaml  ros_controllers.yaml
arm_moveit_config/launch/: demo.launch  execution.launch  move_group.launch  my_arm_moveit_controller_manager.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
env/: model1-0  model2-0
env/model1/: model.config  model.sdf
env/model2/: model.config  model.sdf
my_arm/: CMakeLists.txt  arm base.stl  package.xml  urdf.rviz
my_arm/config/: joint_names_my_arm.yaml
my_arm/controller/: my_arm_control.yaml
my_arm/launch/: controller_utils.launch  display.launch  gazebo.launch  my_arm_gazebo.launch  my_arm_gazebo_controlled.launch
my_arm/meshes/: 1.stl  2.stl  3.stl  4.stl  5.stl  6.stl  7.stl  Link1.STL  Link2.STL  base_link.STL
my_arm_control/: CMakeLists.txt  package.xml
pcl/: CMakeLists.txt  pcl
pointnet/: .gitignore  README.md  get_pointcloud.py  inference.py  meshlab.mlx  recognize.py
python_interface/: CMakeLists.txt  package.xml
robotic_arm/: EC601_Arm.skp  EC601_Arm~.skp  arm_1.stl  arm_2.stl  carpus.stl  finger_2.stl  hand.stl  platform.stl  大臂.stl  底座.stl  手指.stl  手腕.stl
stl&cordination/: arm_1.stl  finger_1.stl  hand.stl  platform.stl
voice(google)/: readme.md
(+14 files in other folders)
